# exercise

./: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md  ch08.md
notes/: redis深度遍历.md
project/: install.sh  readme.md
project/project1/: Dockerfile  myredis.conf  router_config.py
project/project2/: CMakeLists.txt  Dockerfile  subscribe.cpp
project/project3/: Dockerfile  dt.py
